@@ -9,12 +9,14 @@ addons_la_SOURCES = \
 	ao_openuri.h \
 	ao_systray.h \
 	ao_bookmarklist.h \
+	ao_markword.h \
 	tasks.h \
 	addons.c \
 	ao_doclist.c \
 	ao_openuri.c \
 	ao_systray.c \
 	ao_bookmarklist.c \
+	ao_markword.c \
 	tasks.c
 
 addons_la_LIBADD = $(COMMONLIBS)
