@@ -7,6 +7,7 @@ addons/src/ao_openuri.c
 addons/src/addons.c
 addons/src/ao_doclist.c
 addons/src/ao_bookmarklist.c
+addons/src/ao_markword.c
 
 #codenav
 codenav/src/codenavigation.c
