@@ -2,6 +2,8 @@
 
  * src/ao_bookmarklist.c:
    Prevent updating the bookmark list if it is disabled.
+ * src/Makefile.am, src/ao_markword.c, src/ao_markword.h, src/addons.c:
+   Add 'Mark Word' addon.
 
 
 2009-11-01  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
